Changed CSS grid from using named areas to numbered to see if it fixes the error on Safari where all items are smashed together

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -21,11 +21,11 @@
 
 .link {
   text-decoration: none;
-  color: inherit;
+  color: black;
 }
 
 .link:visited {
-  color: inherit;
+  color: black;
 }
 
 .input, .textarea {
