--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -53,6 +53,7 @@
 
 .Link {
   background-color: #fff;
+  color: black;
   padding: 1rem;
 }
 
